--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Texturina&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
   background-color: #292929;
   margin: 0;
@@ -14,6 +15,22 @@ body {
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+}
+
+button {
+  font-weight: bold;
+}
+
+.robotoBold {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
 }
 
 .container {
@@ -33,7 +50,7 @@ body {
 .container .calculatrice {
   border-radius: 20px 20px 0px 0px;
   width: 100%;
-  height: 95%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -77,7 +94,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 10px;
+  margin: 5px;
   border: none;
   border-radius: 10px;
   font-size: 40px;
@@ -128,14 +145,21 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: inset 5px 5px 10px #1b1b1b, inset -5px -5px 10px #424242;
           box-shadow: inset 5px 5px 10px #1b1b1b, inset -5px -5px 10px #424242;
+  border: rgba(255, 255, 255, 0) 1px solid;
+  color: white;
+  height: 70px;
+  font-family: "Texturina", serif;
+  font-size: 2rem;
+  text-shadow: 0 0 40px black;
 }
 
 .container .calculatrice .clavier .touche:hover {
-  background-color: rgba(41, 41, 41, 0.89);
+  background-color: #3d3d3d;
 }
 
 .container .calculatrice .clavier .touche:active {
   background-color: unset;
+  border: white 1px solid;
 }
 
 @media screen and (max-width: 450px) {
@@ -153,5 +177,7 @@ body {
 
 p {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
+  opacity: 0.8;
 }
 /*# sourceMappingURL=style.css.map */
