--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Texturina&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
     background-color: rgb(41, 41, 41);
@@ -15,6 +15,22 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+button {
+    font-weight: bold;
+}
+
+.robotoBold {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
 .container {
     width: 100%;
     height: 100%;
@@ -24,7 +40,7 @@ body {
     .calculatrice {
         border-radius: 20px 20px 0px 0px;
         width: 100%;
-        height: 95%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         background-image: linear-gradient(
@@ -56,7 +72,7 @@ body {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin: 10px;
+                margin: 5px;
                 border: none;
                 border-radius: 10px;
                 font-size: 40px;
@@ -90,12 +106,19 @@ body {
                 border-radius: 5px;
                 box-shadow: inset 5px 5px 10px rgb(27, 27, 27),
                             inset -5px -5px 10px rgb(66, 66, 66);
+                border: rgba(255, 255, 255, 0) 1px solid;  
+                color: white;
+                height: 70px;          
+                font-family: "Texturina", serif;
+                font-size: 2rem;
+                text-shadow: 0 0 40px rgb(0, 0, 0);
             }
             .touche:hover {
-                background-color: rgba(41, 41, 41, 0.89);
+                background-color: rgb(61, 61, 61);
             }
             .touche:active {
                 background-color: unset;
+                border: white 1px solid;
             }
         }
     }
@@ -114,4 +137,6 @@ body {
 
 p {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    opacity: 0.8;
 }
